add css and item

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
     <div class="container">
          <div class="item"></div>
+         <div class="item"></div>
+         <div class="item"></div>
+         <div class="item"></div>
+         <div class="item"></div>
     </div>
 </body>
 </html>
