--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <div class="container">
-         <div class="item"></div>
-         <div class="item"></div>
-         <div class="item"></div>
+         <div class="item item1">
+            This is a Header
+         </div>
          <div class="item"></div>
          <div class="item"></div>
          <div class="item"></div>
