--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
          <div class="item"></div>
          <div class="item"></div>
          <div class="item"></div>
-         <div class="item"></div>
-         <div class="item"></div>
-         <div class="item"></div>
+         <div class="item footer"></div>
+         
     </div>
 </body>
 </html>
