--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          <div class="item item1">
             This is a Header
          </div>
-         <div class="item"></div>
+         <div class="item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed qui accusantium consequatur delectus iure magni nemo nostrum exercitationem nulla? Eveniet laboriosam, animi quis et eaque id. Quae perspiciatis repellendus nam.</div>
          <div class="item"></div>
          <div class="item"></div>
          <div class="item footer"></div>
