--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="grid-container">
         <div class="grid-item item-1">1</div>
-        <div class="grid-item">2</div>
+        <div class="grid-item item-2">2</div>
         <div class="grid-item">3</div>
         <div class="grid-item">4</div>
         <div class="grid-item">5</div>
